	- feature: new keybindings: KeySysCascade, KeySysArrange,
		KeySysTileVertical, KeySysTileHorizontal, KeySysUndoArrange
    		KeySysArrangeIcons, KeySysMinimizeAll, KeySysHideAll
		 (inspired by Liav Asseraf)
	- bugfix: provide consistence behaviour in resource priority for
		  absolutely and relatively specified themes
		 (reported by Helmut Pitters)
!!!	- feature: show all icons in quickswitch (Andrew Oliver,
		 (Marius Gedminas)
!!!	- bugfix: limitSize still was broken (Max Kirilov)
!!!	- bugfix: runonce hotkeys

1.0.8-5: 2001-04-26
	- bugfix: improved gettext detection
	- bugfix: Win95Keys=0 caused undeterminated key grabbing
	- bugfix: #418469 TitleBarCentered compatibility hack
	- bugfix: improved detection of libesd
	- bugfix: #418719 help browser has no scroll bar in 1.0.8-4
	- bugfix: #418383 need to log out twice
	- bugfix: #418291 Alt+key doesn't work in 1.0.8-4
		 (thank you KoRn3, for helping me to track it down)

1.0.8-4: 2001-04-23
	- bugfix: s/TitleButtons/TitleButtonsRight/ in win95/default.theme
	- bugfix: #409500 Infadel2 theme failed to install
	- bugfix: segfault in icehelp
	- bugfix: usage screen for icehelp
	- bugfix: cursor definitions of global themes (libdir, cfgdir)
		  were ignored (Olivier Samyn)
	- bugfix: #409622 duplicate themes not in their sections
	- bugfix/feature: absolute paths for themes are allowed now
	- bugfix: #407766 icewm 1.0.6 fails to compile (glibc 2.2 and AIX)
	- bugfix: #410988 maximizing click failed randomly/
		  #410971 keybindings not working randomly
		 (thank you moss, for helping me to track it down)
	- bugfix: #408519 fd leak on restart
	- bugfix: #409804, #410954, #410959 doNotCover quirks
	- feature: Hungarian messages (Czinege Tamas)
	- feature: Catalan messages (Toni Cunyat i Alario)
	- feature: ColorDisabledMenuItemShadow
	- feature: improved autoscrolling of menus 
	- feature: improved handling of the Penguin/Win_L/Win_R key
	- feature: MenuMaximalWidth option